@@ -31,6 +31,7 @@ interface:
 - added function SCIPcomputeLPRelIntPoint() to compute a relative interior point of the current LP
 - added function SCIPsepastoreRemoveRedundantCuts() to remove redundant cuts from the separation storage
 - added result value SCIP_NEWROUND that allows a separator/constraint handler to start a new separation round (without previous calls to other separators/conshdlrs)
+- implemented SCIPlpiGetPrimalRay() in SoPlex interface that has become available with SoPlex version 1.5.0.2
 
 performance improvements:
 - performance improvements in prop_vbounds
